# pingtray

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/pingtray/: main.py
