[project]
name = "pingtray"
version = "1.0.0"
description = "A macOS menu-bar app that shows internet connectivity status"
readme = "README.md"
license = "0BSD"
requires-python = ">=3.11"
dependencies = [
    "icmplib>=3.0.4",
]

[project.urls]
Repository = "https://github.com/marionauta/pingtray"

[project.scripts]
pingtray = "pingtray.main:run"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
